# Qos_degradation_predictor

./: .gitignore  CMakeLists.txt  IEEE_Project_Architecture.md  README.md  RUN_INSTRUCTIONS.md  show_math.bat  show_math.ps1
config/: simulation_config.json
src/: main.cpp
src/ml/: LogisticRegression.cpp  LogisticRegression.h
src/network/: Link.cpp  Link.h  Packet.cpp  Packet.h  Queue.cpp  Queue.h
src/qos/: Logger.cpp  Logger.h  Metrics.cpp  Metrics.h
src/simulator/: RealTimeFlow.cpp  RealTimeFlow.h  Simulator.cpp  Simulator.h  TCPFlow.cpp  TCPFlow.h  TrafficGenerator.h
src/utils/: CSVReader.cpp  CSVReader.h  Config.cpp  Config.h
src/visualization/: Dashboard.cpp  Dashboard.h
